# AntLionOptimizer

./: CMakeLists.txt  README.md  ScatterPlots.py  UserInput.txt  main.c  memoryTest.c
ALO/: ALO.c  ALO.h
Algorithms/: Algorithms.c  Algorithms.h
DataContainer/: DataContainer.c  DataContainer.h
MT/: mt19937ar.c
MatrGen/: MatrGen.c  MatrGen.h
Params/: Params.c  Params.h
Results/: AntLionResults.csv
UserInput/: UserInput.txt
Utils/: Utils.c  Utils.h
VectorAndResult/: VectorAndResult.c  VectorAndResult.h
